--- a/css/style.css
+++ b/css/style.css
@@ -91,9 +91,8 @@ img {
   align-items: center;
 }
 .logo {
-  margin-right: 93px;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin-right: 41px;
+  
 
   font-family: "Raleway";
   font-weight: 700;
@@ -115,12 +114,16 @@ img {
   list-style-type: none;
   display: flex;
   padding: 0;
+
 }
-.nav-item + .nav-item {
+.nav-item {
+  position: relative;
   margin-left: 50px;
+  padding: 31px 0;
+  
 }
 .nav-link {
-  padding: 20px 0;
+  padding: 30px 0;
 
   font-weight: 500;
   font-size: 14px;
@@ -128,11 +131,38 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--main-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .nav-link:hover,
 .nav-link:focus {
   color: var(--main-blue-color);
 }
+
+.current::after {
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+  content: "";
+  display: inline-block;
+  width: 100%;
+  height: 4px;
+  opacity: 1;
+
+  background: #2196F3;
+border-radius: 2px;
+
+transition-property: opacity;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.nav-link:hover::after, .nav-link:focus::after {
+  opacity: 1;
+} 
+
 .header-mail {
   display: flex;
   justify-content: center;
@@ -146,6 +176,10 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--p-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-mail:hover,
 .header-mail:focus {
@@ -160,6 +194,10 @@ img {
   letter-spacing: 0.02em;
 
   color: var(--p-text-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-tel:hover,
@@ -215,6 +253,10 @@ img {
   color: var(--main-white-color);
   background: var(--main-blue-color);
   cursor: pointer;
+
+  transition-property: color background;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .hero-btn:hover,
 .hero-btn:focus {
@@ -280,6 +322,25 @@ img {
   justify-content: space-between;
 }
 
+.activity-items {
+  position: relative;
+}
+.activity-label {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 27px 0;
+
+  font-weight: 700;
+font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+
+color: var(--main-white-color);
+background-color: rgba(47, 48, 58, 0.8);
+}
 /* Team */
 
 .section-team {
@@ -336,7 +397,12 @@ img {
   height: 44px;
   margin-right: 10px;
 
+  border-radius: 50%;
   fill: var(--svg-fill);
+
+  transition-property: background-color fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-link:last-child {
   margin-right: 0;
@@ -371,14 +437,23 @@ img {
   justify-content: center;
   align-items: center;
 
-  border: 1px solid var(--svg-fill);
+  border: 1px solid;
+  border-color: var(--svg-fill);
   border-radius: 4px;
+
+  transition-property: border-color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-item:last-child {
   margin-right: 0;
 }
 .clients-icon {
   fill: var(--svg-fill);
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
@@ -429,6 +504,10 @@ img {
   padding-right: 18px;
 
   color: var(--main-white-color);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .address-item {
   margin-bottom: 5px;
@@ -486,6 +565,57 @@ text-transform: uppercase;
   fill: var(--main-white-color);
 }
 
+/* MODAL */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  opacity: 1;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background: rgba(0, 0, 0, 0.2);
+}
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+}
+.modal-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  padding: 0;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 30px;
+  height: 30px;
+
+  background: #FFFFFF;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.modal-ikon {
+  fill: #000000;
+}
 /* PORTFOLIO */
 
 .portfolio {
@@ -523,6 +653,10 @@ text-transform: uppercase;
   border-radius: 4px;
   border-color: #f5f4fa;
   cursor: pointer;
+
+  transition-property: color background-color box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
@@ -550,7 +684,13 @@ text-transform: uppercase;
   width: 370px;
   margin-right: 30px;
   margin-bottom: 30px;
+
   border: 1px solid #eeeeee;
+
+  transition-property: box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .projects-list-item:nth-child(3n) {
   margin-right: 0;
@@ -558,8 +698,7 @@ text-transform: uppercase;
 .projects-list-item:nth-child(n + 7) {
   margin-bottom: 0;
 }
-.projects-link {
-}
+
 .projects-list-item:hover,
 .projects-list-item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -576,11 +715,47 @@ text-transform: uppercase;
 .item-sign {
   padding: 20px 24px;
 }
+.card-box {
+  position: relative;
+  overflow: hidden;
+
+}
+.card-overlay {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+
+  background: rgba(33, 150, 243, 0.9);
+
+  transition-property: transform;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.projects-list-item:hover .card-overlay {
+  transform: translateY(-100%);
+}
+.text-overlay {
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 18px;
+line-height: 1.56;
+
+letter-spacing: 0.03em;
+
+color: #FFFFFF;
+}
 
 /* icon */
 .header-icon {
   margin-right: 10px;
   fill: currentColor;
+
+  transition-property: fill;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-mail:hover .header-icon,
 .header-mail:focus .header-icon {
